Fix autofilter (un)select buttons: size
Icons were too small, set them to the same size used in toggle all btn
 - 18px

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -499,8 +499,9 @@ input[type='number']:hover::-webkit-outer-spin-button {
 }
 
 .autofilter-container #select_current {
-	height: 16px;
-	width: 16px;
+	/* Same size as #toggle_all.checkbutton > input */
+	height: 18px;
+	width: 18px;
 	margin: 8px;
 	border: none;
 }
@@ -511,8 +512,9 @@ input[type='number']:hover::-webkit-outer-spin-button {
 }
 
 .autofilter-container #unselect_current {
-	height: 16px;
-	width: 16px;
+	/* Same size as #toggle_all.checkbutton > input */
+	height: 18px;
+	width: 18px;
 	margin: 8px 8px 8px 0px;
 	border: none;
 }
